--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /ID-Card/Cn_UserIdCard/obj
 /ID-Card/Cn_UserIdCard/bin
 /ID-Card/.vs
+/Aliyun.OSS/Aliyun.OSS/Aliyun.OSS.Samples/bin
+/Aliyun.OSS/Aliyun.OSS/Aliyun.OSS.Samples/obj
+/Aliyun.OSS/Aliyun.OSS/Aliyun.OSS.Samples/App.config
+/Aliyun.OSS/.vs
+/Aliyun.OSS/packages
