--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /ID-Card/Cn_UserIdCard/obj
 /ID-Card/Cn_UserIdCard/bin
 /ID-Card/.vs
-/Aliyun.OSS/Aliyun.OSS/Aliyun.OSS.Samples/bin
-/Aliyun.OSS/Aliyun.OSS/Aliyun.OSS.Samples/obj
-/Aliyun.OSS/Aliyun.OSS/Aliyun.OSS.Samples/App.config
+
 /Aliyun.OSS/.vs
 /Aliyun.OSS/packages
+/Aliyun.OSS/Aliyun.OSS/App-demo.config
+/Aliyun.OSS/Aliyun.OSS/obj
+/Aliyun.OSS/Aliyun.OSS/bin
