--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Aliyun.OSS/Aliyun.OSS/App-demo.config
 /Aliyun.OSS/Aliyun.OSS/obj
 /Aliyun.OSS/Aliyun.OSS/bin
+/IPCode/.vs
+/IPCode/IP/obj
+/IPCode/IP/bin
